--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
         </div>
 
         <div class="quiz-question-container">
-          <h2 class="quiz-question">1. What does HTML stand for?</h2>
+          <div class="quiz-question">
+            <!-- <h2 class="quiz-question-index">1.</h2>
+            <span class="quiz-question-text">What does HTML stand for?</span> -->
+            <!-- Question Comes Here -->
+          </div>
           <div class="quiz-options">
-            <button class="quiz-option">
+            <!-- Options Come Here -->
+            <!-- <button class="quiz-option">
               <div class="quiz-option-value">Text Preprocessor</div>
               <img src="" class="quiz-option-icon" />
             </button>
@@ -38,7 +43,7 @@
             <button class="quiz-option">
               <div class="quiz-option-value">Hyper Tool Multi Language</div>
               <img src="" class="quiz-option-icon" />
-            </button>
+            </button> -->
           </div>
         </div>
         <div class="hr"></div>
@@ -49,6 +54,7 @@
       </div>
     </main>
 
-    <script src="app.js"></script>
+    <script type="module" src="questions.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
