--- a/index.html
+++ b/index.html
@@ -22,32 +22,14 @@
 
         <div class="quiz-question-container">
           <div class="quiz-question">
-            <!-- <h2 class="quiz-question-index">1.</h2>
-            <span class="quiz-question-text">What does HTML stand for?</span> -->
             <!-- Question Comes Here -->
           </div>
           <div class="quiz-options">
             <!-- Options Come Here -->
-            <!-- <button class="quiz-option">
-              <div class="quiz-option-value">Text Preprocessor</div>
-              <img src="" class="quiz-option-icon" />
-            </button>
-            <button class="quiz-option correct">
-              <div class="quiz-option-value">Hyper Text Markup Language</div>
-              <img src="" class="quiz-option-icon" />
-            </button>
-            <button class="quiz-option incorrect">
-              <div class="quiz-option-value">Hyper Text Multiple Language</div>
-              <img src="" class="quiz-option-icon" />
-            </button>
-            <button class="quiz-option">
-              <div class="quiz-option-value">Hyper Tool Multi Language</div>
-              <img src="" class="quiz-option-icon" />
-            </button> -->
           </div>
         </div>
         <div class="hr"></div>
-        <div class="quiz-remaining-questions">
+        <div class="quiz-footer">
           <span class="quiz-questions-current">1</span> of
           <span class="quiz-questions-total">5</span> Questions
         </div>
